fix bugs, added policy, z-index feedback, fix cart page

--- a/app/components/Footer/Footer.module.css
+++ b/app/components/Footer/Footer.module.css
@@ -145,4 +145,7 @@
     gap: 16px;
     flex-direction: column;
   }
+  .contact-social-media-container{
+    align-items: center;
+  }
 }
