--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -103,6 +103,7 @@
   position: fixed;
   right: 25px;
   bottom: 25px;
+  z-index: 3;
 }
 
 .chat-feedback-line{
